data - fix set relative interval bug + light grey color slightly darker for better visibility

--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -7,7 +7,7 @@ $color-grey-dark: #242424;
 $color-grey: #606060;
 $color-grey-filter: #808080;
 $color-grey-medium: #b0b0b0;
-$color-grey-light: #ddd;
+$color-grey-light: #cccccc;
 $color-off-white: #e9eae1;
 
 $color-primary: #f8b133;
